--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -1,13 +1,4 @@
-// Fonts
-
-
-// Variables
-@import 'variables';
-
-// Bootstrap
-@import 'bootstrap/scss/bootstrap';
-
-// Fontawesome
+@import "~@fortawesome/fontawesome-free/webfonts";
 
 @import "@fortawesome/fontawesome-free/scss/fontawesome";
 @import "@fortawesome/fontawesome-free/scss/regular";
