--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,8 @@
 @import "@fortawesome/fontawesome-free/scss/fontawesome";
 @import "@fortawesome/fontawesome-free/scss/regular";
 @import "@fortawesome/fontawesome-free/scss/solid";
+
+.text-orange{
+    color: #e66f00 !important;
+}
+
