--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,3 +17,13 @@
     color: #e66f00 !important;
 }
 
+.card-registration .select-input.form-control[readonly]:not([disabled]) {
+    font-size: 1rem;
+    line-height: 2.15;
+    padding-left: .75em;
+    padding-right: .75em;
+}
+.card-registration .select-arrow {
+    top: 13px;
+}
+
